--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,58 +2,63 @@
     margin: 10px;
 }
 .header{
-    display: flex;
+    display: grid;
     width: 100%;
-    flex-flow: row nowrap;
+    grid-template-columns: 150px 40%;
     justify-content: space-between;
 }  
+
 .navigation li{
     display: inline;
 }   
 
 .main{
-    display: flex;
+    display: grid;
+    grid-template-columns: 70% 30%;
     margin-top: 5vh;
 }   
 
 .aside-section{
     align-self: center;
-    width: 30%;
-    flex-shrink: 1;
 }
 
 .main-section{
     height: 50vh;
-    flex-grow: 1;
-    align-self: flex-start;
-    display: flex;
-    flex-flow: row wrap;
-    align-content: space-between;
+    display: grid;
+    grid-template-areas:
+        "hd-cent hd-cent"
+        "art-one art-two"
+        "art-cent art-cent";
+    grid-template-rows: 30% 40% 40%;
+    grid-template-columns: 50% 50%;
+}
+
+.heading-center{
+    grid-area:hd-cent;
 }
 
 .center{
     text-align: center;
 }
 
-.articles{
-    width: 49%;
+.article-one{
+    grid-area:art-one;
 }
 
-.center{
-    margin: 0 auto;
+.article-two{
+    grid-area: art-two;
+}
+
+.article-center{
+    grid-area: art-cent;
 }
 
 .footer{
     margin-top: 5vh;
-    display: flex;
-    flex-flow: row;
+    display: grid;
+    grid-template: 100% / 20% 20% 20% 20%;
     justify-content: space-around;
-    flex-basis: 20vw;
     align-items: center;
-}
-
-.big-footer{
-    width: 20vw;
 }
 
 .small-picture{
